force-app/main/default/objects/ATT_EXP__Attachment__c/ATT_EXP__Attachment__c.object-meta.xml
<CustomObject>
    <description>Use this object to store information about Attachment.</description>
    <label>Attachment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>