force-app/main/default/objects/ATT_EXP__Attachment__c/fields/ATT_EXP__Account__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Force.com has only Contact and Account Standard objects, and Attachment requires at least one parent so we are using Account as default lookup for deploying it to the subscriber instance.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>