force-app/main/default/objects/ATT_EXP__Attachment__c/fields/ATT_EXP__Comments__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Comments__c</fullName>
    <description>One can put comments for each version of attachment they attach.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>