force-app/main/default/objects/ATT_EXP__Attachment__c/fields/ATT_EXP__External_Id__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__External_Id__c</fullName>
    <inlineHelpText>This is used to store the Id of Standard Attachment object while Migrating.</inlineHelpText>
    <label>External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>