force-app/main/default/objects/ATT_EXP__Attachment__c/fields/ATT_EXP__Folder__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Folder in which this Attachment should be stored.</description>
    <label>Folder</label>
    <referenceTo>ATT_EXP__Folder__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>