force-app/main/default/objects/ATT_EXP__Attachment__c/fields/ATT_EXP__Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Latest_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Version Id of the Last Version which was uploaded under this Attachment should be stored here.</description>
    <label>Latest Version</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>