force-app/main/default/objects/ATT_EXP__Attachment__c/fields/ATT_EXP__Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Parent_Field__c</fullName>
    <description>Name of the Lookup field which relates this Attachment to it&apos;s parent record. e.g. If this attachment is attached to Account record through lookup field Account__c, that should be stored here.</description>
    <label>Parent Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>