force-app/main/default/objects/ATT_EXP__Attachment__c/fields/ATT_EXP__Size__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Size__c</fullName>
    <label>Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>