force-app/main/default/objects/ATT_EXP__Attachment__c/fields/ATT_EXP__Status__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Status__c</fullName>
    <description>This field specifies current status of the Attachment whether the latest version is being uploaded or available. Also when a Attachment is archived this field is marked as &quot;Archived&quot; along with Status field of all Attachment Version records.</description>
    <inlineHelpText>This field specifies current status of the Attachment whether the latest version is being uploaded or available. Also when a Attachment is archived this field is marked as &quot;Archived&quot; along with Status field of all Attachment Version records.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>