force-app/main/default/objects/ATT_EXP__Attachment__c/fields/ATT_EXP__Storage_Profile__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Storage_Profile__c</fullName>
    <description>This field stores name of the server profile which was used to store the attachment. So when the attachment is retreived same profile will be used to retreive the attachment.</description>
    <label>Storage Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>amazons3</fullName>
            </value>
            <value>
                <fullName>azureblob</fullName>
            </value>
            <value>
                <fullName>default</fullName>
            </value>
            <value>
                <fullName>ftp</fullName>
            </value>
            <value>
                <fullName>local</fullName>
            </value>
            <value>
                <fullName>sftp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>